pixxatime/pizzatime.css
body {
  background: rgb(250, 250, 250);
}

#mainNavbar {
  font-family: 'Lobster', cursive;
}

.carousel-caption h2{
  font-family: 'Lobster', cursive;
  font-size: 4em;
  text-shadow: 2px 2px #1d1c1c;
}

#about h3 {
  font-size: 3em;
  font-family: 'Lobster', cursive;
}

#booking{
  font-size: 5em;
  font-family: 'Lobster', cursive;
  text-shadow: 2px 2px #1d1c1c;
}

#greenFlag {
  color: green;
}

#whiteFlag {
  color: white;
}

#redFlag {
  color: red;
}

.content {
  margin-top: 100px;
  margin-bottom: 100px;
}

#mainNavbar {
  font-size: 1.5rem;
  font-weight: 400;
}

#mainNavbar .navbar-brand {
  color: #b8b8b8;
  font-size: 2rem;
}

#headingGroup h1 {
  font-weight: 100;
  font-size: 4rem;
}

.carousel-caption {
  transform: translateY(-50%);
  bottom: 0;
  top: 50%;
}

.navbar.scrolled {
  background: #242424;
  transition: background 500ms;
}

.carousel-inner {
  height: auto;
  width: 100vw;
}

.container {
  padding: 10%;
}

.reservetext {
  padding: 10px;
}

.bookingpic {
  background-image: url(https://images.pexels.com/photos/3498/italian-pizza-restaurant-italy.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
  width: 100vw;
}

.jumbotron {
    background: rgba(36, 36, 36, 0.5);
    color: white;
}

#map {
  padding: 5px;
  display: none;
}

@media (max-width: 2000px) {
  #headingGroup h1 {
    font-weight: 100;
    font-size: 3rem;
  }
}

